# people-log

./: .gitignore  CMakeLists.txt  Cargo.toml
includes/: Anecdote  EducationElement  Person  Relatives  SocialNetworks
src/: Anecdote.cpp  EducationElement.cpp  Person.cpp  main.cpp  main.rs
